mongoDb Connect Setup Done

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=5000
+MONGO_DB_URI = mongodb+srv://kumawataakash515:qwertyuiop@cluster0.pvnhsnl.mongodb.net/chat-App_db ?retryWrites=true&w=majority
