signup api  integration done

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=5000
-MONGO_DB_URI = mongodb+srv://kumawataakash515:qwertyuiop@cluster0.pvnhsnl.mongodb.net/chat-App_db ?retryWrites=true&w=majority
+MONGO_DB_URI = mongodb+srv://kumawataakash515:qwertyuiop@cluster0.pvnhsnl.mongodb.net/chat-App?retryWrites=true&w=majority
+JWT_SECRET = lM7i96VoG7KF5x8CcxPsTfbFzQoVQ7XSwUpsq3TwTlY=
+JWT_KEY = JWT_SECRET
+NODE_ENV = development
